linting + fix animations

--- a/package.json
+++ b/package.json
@@ -10,29 +10,31 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"test:unit": "vitest",
-		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"lint": "eslint . --ext .js,.jsx,.ts,.tsx,.svelte",
+		"lint:fix": "pnpm lint --fix"
 	},
 	"devDependencies": {
-		"@playwright/test": "^1.28.1",
-		"@sveltejs/adapter-auto": "^1.0.0",
+		"@playwright/test": "^1.32.2",
+		"@sveltejs/adapter-auto": "^1.0.3",
 		"@sveltejs/adapter-netlify": "1.0.0-next.88",
-		"@sveltejs/kit": "^1.0.0",
+		"@sveltejs/kit": "^1.15.2",
 		"@types/three": "^0.147.1",
-		"@typescript-eslint/eslint-plugin": "^5.45.0",
-		"@typescript-eslint/parser": "^5.45.0",
-		"eslint": "^8.28.0",
-		"eslint-config-prettier": "^8.5.0",
+		"@typescript-eslint/eslint-plugin": "^5.58.0",
+		"@typescript-eslint/parser": "^5.58.0",
+		"eslint": "^8.38.0",
+		"eslint-config-prettier": "^8.8.0",
+		"eslint-plugin-simple-import-sort": "^8.0.0",
 		"eslint-plugin-svelte3": "^4.0.0",
-		"prettier": "^2.8.0",
-		"prettier-plugin-svelte": "^2.8.1",
-		"sass": "^1.57.1",
-		"svelte": "^3.54.0",
-		"svelte-check": "^2.9.2",
-		"tslib": "^2.4.1",
-		"typescript": "^4.9.3",
-		"vite": "^4.0.0",
-		"vitest": "^0.25.3"
+		"eslint-plugin-unused-imports": "^2.0.0",
+		"prettier": "^2.8.7",
+		"prettier-plugin-svelte": "^2.10.0",
+		"sass": "^1.61.0",
+		"svelte": "^3.58.0",
+		"svelte-check": "^2.10.3",
+		"tslib": "^2.5.0",
+		"typescript": "^4.9.5",
+		"vite": "^4.2.1",
+		"vitest": "^0.25.8"
 	},
 	"type": "module",
 	"dependencies": {
